--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "svgsaver",
-  "version": "0.9.0",
+  "name": "@sedan-utils/svgsaver",
+  "version": "0.9.2",
   "description": "download an SVG element with css styles",
   "main": "lib/svgsaver.js",
   "jsnext:main": "src/svgsaver.js",
@@ -30,7 +30,7 @@
     "css",
     "png"
   ],
-  "author": "J. Harshbarger",
+  "author": "J. Harshbarger, Tracis",
   "license": "MIT",
   "devDependencies": {
     "babel": "^5.8.38",
